<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FCA2FF"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="ru.dubr.jetpacknavigation.BoxFragment">

    <TextView
        android:id="@+id/valueTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/this_is_a_box"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back" />

    <Button
        android:id="@+id/openSecretButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_secret" />

    <Button
        android:id="@+id/generateNumberButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_number" />

</LinearLayout>