<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="ru.dubr.jetpacknavigation.SecretFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/this_is_a_secret_place"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back" />

    <Button
        android:id="@+id/closeBoxButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_the_whole_box" />

</LinearLayout>